[tweak]: use shipping table partial in faqs view

--- a/app/views/statics/faqs.html.slim
+++ b/app/views/statics/faqs.html.slim
@@ -28,29 +28,15 @@
       h2 Shipping & Deliveries
 
       h3 When will my order ship?
-      
+
       p Shipping times vary depending on the complexity of any customisations you might order. All of our dresses are made on demand and making will commence the day your order is received. Our make time varies depending on customisations; between 4 - 8 business days which means you will receive your dress in up to 10 business days. We recommend allowing 2 weeks from the date of your purchase to ensure you have enough time for your dress to arrive for your special event. If you need a dress faster, simply contact our customer service team who can explain our express dress making service where you can receive your dress in 5 business days!
-            
+
       p Please note: Orders are not shipped on the weekends or holidays.
 
       h3 How long will it take for my order to arrive?
       p Please refer to the table below to determine your shipping times:
-      p
-      table.table
-        tr
-          th Order Type
-          th Australia
-          th United States
-        tr
-          td ON DEMAND, STANDARD DRESS
-          td 7 - 10 Business Days
-          td 7 - 10 Business Days
-        tr
-          td ON DEMAND, CUSTOMIZED DRESS
-          td 10 - 14 Business Days
-          td 10 - 14 Business Days
-      p
 
+      = render 'shipping_tables'
 
       h2 RETURNS
       h3 What is your returns policy?
@@ -90,7 +76,7 @@
           p
             i For United States Customers:
             br
-            ' Fame & Partners
+            ' Fame &amp; Partners
             br
             ' RETURNS
             br
@@ -103,7 +89,7 @@
           p
             i For Australian Customers:
             br
-            ' Fame & Partners
+            ' Fame &amp; Partners
             br
             ' RETURNS
             br
