[tweak] updated shipping table markup to be responsive

--- a/app/views/statics/_shipping_tables.html.slim
+++ b/app/views/statics/_shipping_tables.html.slim
@@ -1,21 +1,23 @@
-table.table
-  tr
-    th Item
-    th Australia
-    th U.S.A
-    th Rest of World
-  tr
-    td ON DEMAND, STANDARD DRESS
-    td FREE 7 – 10 Business Days
-    td FREE 7 – 10 Business Days
-    td $30.00 7 – 10 Business Days
-  tr
-    td ON DEMAND, CUSTOMIZED DRESS
-    td FREE 10 - 14 Business Days
-    td FREE 10 - 14 Business Days
-    td $30.00 7 – 10 Business Days
-  tr
-    td ON SALE
-    td $11.70 7 – 10 Business Days
-    td $11.70 7 – 10 Business Days
-    td $30.00 7 – 10 Business Days
+table.table.shipping
+  thead
+    tr
+      th Item
+      th Australia
+      th U.S.A
+      th Rest of World
+  tbody
+    tr
+      td data-title="Item" ON DEMAND, STANDARD DRESS
+      td data-title="Australia" FREE 7 – 10 Business Days
+      td data-title="U.S.A." FREE 7 – 10 Business Days
+      td data-title="Rest of World" $30.00 7 – 10 Business Days
+    tr
+      td data-title="Item" ON DEMAND, CUSTOMIZED DRESS
+      td data-title="Australia" FREE 10 - 14 Business Days
+      td data-title="U.S.A." FREE 10 - 14 Business Days
+      td data-title="Rest of World" $30.00 7 – 10 Business Days
+    tr
+      td data-title="Item" ON SALE
+      td data-title="Australia" $11.70 7 – 10 Business Days
+      td data-title="U.S.A." $11.70 7 – 10 Business Days
+      td data-title="Rest of World" $30.00 7 – 10 Business Days
