[style] add reposive tables styles

--- a/app/assets/stylesheets/application_redesign.css.scss
+++ b/app/assets/stylesheets/application_redesign.css.scss
@@ -40,11 +40,10 @@
 @import 'redesign/sale_lp';
 @import 'redesign/fashion-it-girl-winner';
 @import 'redesign/style_session';
+@import 'redesign/tables';
 
 @import 'redesign/checkout';
 @import 'redesign/cart';
-
-
 
 // Time specific content
 @import 'transient_content';
