[fix] fix ball gowns menu url

--- a/app/views/layouts/redesign/_header.html.slim
+++ b/app/views/layouts/redesign/_header.html.slim
@@ -99,7 +99,7 @@ ruby:
                         li.mega-menu-list--item
                           = link_to 'Homecoming', build_taxon_path('Homecoming'), title: 'Homecoming'
                         li.mega-menu-list--item
-                          = link_to 'Ball', build_taxon_path('Ball'), title: 'Ball'
+                          = link_to 'Ball Gowns', build_taxon_path('Ball Gowns'), title: 'Ball Gowns'
                         li.mega-menu-list--item
                           = link_to 'Sweet 16', build_taxon_path('Sweet 16'), title: 'Sweet 16'
                         li.mega-menu-list--item
