--- a/app/views/layouts/redesign/_mobile_menu.html.slim
+++ b/app/views/layouts/redesign/_mobile_menu.html.slim
@@ -8,24 +8,24 @@
     .text-center
       h3 Styles
       .list-group
-        = link_to 'Two-Piece', build_taxon_path('Two Piece'), class: 'list-group-item', title: "Two-Piece Dresses"
-        = link_to 'One Shoulder', build_taxon_path('One-Shoulder'), class: 'list-group-item', title: "One Shoulder Dresses"
-        = link_to 'Strapless', build_taxon_path('Strapless'), class: 'list-group-item', title: "Strapless Dresses"
-        = link_to 'V-Neck', build_taxon_path('V-Neck'), class: 'list-group-item', title: "V-Neck Dresses"
-        = link_to 'Split', build_taxon_path('Split'), class: 'list-group-item', title: "Split Dresses"
-        = link_to 'Backless', build_taxon_path('Open-Back'), class: 'list-group-item', title: "Open Back Dresses"
-        = link_to 'Lace', build_taxon_path('Lace'), class: 'list-group-item', title: "Lace Dresses"
+        = link_to 'Two-Piece', build_taxon_path('Two Piece'), class: 'list-group-item', title: "Two-Piece"
+        = link_to 'One Shoulder', build_taxon_path('One-Shoulder'), class: 'list-group-item', title: "One Shoulder"
+        = link_to 'Strapless', build_taxon_path('Strapless'), class: 'list-group-item', title: "Strapless"
+        = link_to 'V-Neck', build_taxon_path('V-Neck'), class: 'list-group-item', title: "V-Neck"
+        = link_to 'Split', build_taxon_path('Split'), class: 'list-group-item', title: "Split"
+        = link_to 'Backless', build_taxon_path('Backless'), class: 'list-group-item', title: "Backless"
+        = link_to 'Lace', build_taxon_path('Lace'), class: 'list-group-item', title: "Lace"
 
   #mobile-color.mobile-menu-options.hidden
     .text-center
       h3 Colors
       .list-group
-        = link_to "Black Dresses", colour_path('Black'), class: 'list-group-item', title: "Black Dresses"
-        = link_to "White / Ivory Dresses", colour_path('White'), class: 'list-group-item', title: "White / Ivory Dresses"
-        = link_to "Blue Dresses", colour_path('Blue'), class: 'list-group-item', title: "Blue Dresses"
-        = link_to "Pink Dresses", colour_path('Pink'), class: 'list-group-item', title: "Pink Dresses"
-        = link_to "Red Dresses", colour_path('Red'), class: 'list-group-item', title: "Red Dresses"
-        = link_to "Pastel Dresses", colour_path('Pastel'), class: 'list-group-item', title: "Pastel Dresses"
+        = link_to "Black", colour_path('Black'), class: 'list-group-item', title: "Black"
+        = link_to "White / Ivory", colour_path('White'), class: 'list-group-item', title: "White / Ivory"
+        = link_to "Blue", colour_path('Blue'), class: 'list-group-item', title: "Blue"
+        = link_to "Pink", colour_path('Pink'), class: 'list-group-item', title: "Pink"
+        = link_to "Red", colour_path('Red'), class: 'list-group-item', title: "Red"
+        = link_to "Pastel", colour_path('Pastel'), class: 'list-group-item', title: "Pastel"
 
   #mobile-event.mobile-menu-options.hidden
     .text-center
