[feat]  Link to order show path in admin

--- a/app/views/spree/admin/orders/_line_items_table.html.slim
+++ b/app/views/spree/admin/orders/_line_items_table.html.slim
@@ -32,7 +32,7 @@ table.line_items
             - ship_state = ShippingStatePresenter.new(line_item)
             abbr title=ship_state.delivery_state class="state-#{ship_state.delivery_state}"
               = ship_state.overdue_by
-          td = link_to order.number, edit_admin_order_path(order)
+          td = link_to order.number, admin_order_path(order)
           td = line_item.id
           td = line_item.style_number
           td = line_item.style_name
