[feat] Add countr-size to order line items display

--- a/app/views/spree/admin/orders/_line_items_table.html.slim
+++ b/app/views/spree/admin/orders/_line_items_table.html.slim
@@ -12,6 +12,7 @@ table.line_items
       th Line ID
       th SKU
       th Style Name
+      th Size
       th Customisations
       th Factory
       th Customer
@@ -36,6 +37,7 @@ table.line_items
           td = line_item.id
           td = line_item.style_number
           td = line_item.style_name
+          td = line_item.country_size
           td = line_item.customisations.collect(&:first).join(', ')
           td = line_item.factory
           - if position.zero?
