--- a/app/assets/stylesheets/redesign/_tables.css.scss
+++ b/app/assets/stylesheets/redesign/_tables.css.scss
@@ -9,10 +9,11 @@
 		display: block;
 	}
 
-  .table > tbody > tr > td {
-    // border-top: none;
-    clear: left;
-  }
+	@media only screen and (min-width: 801px) {
+	  .table > tbody > tr > td {
+	    clear: left;
+	  }
+	}
 
 	.table thead tr {
 		position: absolute;
@@ -20,13 +21,8 @@
 		left: -9999px;
 	}
 
-	.table tr {
-    // border: 1px solid #ccc;
-  }
-
 	.table td {
 		border: none;
-		// border-bottom: 1px solid #eee;
 		position: relative;
 		padding-left: 50%;
 		white-space: normal;
