[fix] Disable search on mobile again

--- a/app/views/layouts/redesign/_header.html.slim
+++ b/app/views/layouts/redesign/_header.html.slim
@@ -196,7 +196,7 @@ ruby:
           li.shop.menu-item.account-dropdown
             = render "layouts/redesign/header/my_account_dropdown"
 
-          li.menu-item
+          li.menu-item.hidden-xxs
             a.menu-item--link.search href="#"
               = image_tag "search.png"
             .search-bar.invis
