[fix] updated link to help/service

--- a/app/views/layouts/mailer.html.slim
+++ b/app/views/layouts/mailer.html.slim
@@ -110,7 +110,7 @@ html style="background: #fff none repeat scroll 0% 0%;"
                     div Fame & Partners PTY LTD
                     div Bondi, NSW, Australia
                     div style="text-transform: uppercase;"
-                      a href="http://fameandpartners.com/help" Customer Service 
+                      => link_to "Customer Service", main_app.contact_url
                       span
                         ' | 1300 924 860
                 tr
