--- a/app/views/spree/order_mailer/confirm_email.html.slim
+++ b/app/views/spree/order_mailer/confirm_email.html.slim
@@ -37,11 +37,11 @@ table align="center" border="0" cellpadding="0" cellspacing="0" width="100%"
                     - @order.line_items.each do |item|
                       tr
                         td style="color: #000; font-size: 13px; text-align: left; font-weight: 400; padding: 7px 6px; vertical-align: top;"
-                          div style="font-weight: 700" =' raw(item.variant.product.name)
-                          div =' raw(item.options_text)
-                        td style="color: #000; font-size: 13px; text-align: left; font-weight: 400; padding: 7px 6px; vertical-align: top;" =' item.variant.sku
-                        td style="color: #000; font-size: 13px; text-align: left; font-weight: 400; padding: 7px 6px; vertical-align: top;" =' item.quantity
-                        td style="color: #000; font-size: 13px; text-align: left; font-weight: 700; padding: 7px 6px; vertical-align: top;" =' item.display_amount
+                          div style="font-weight: 700" => raw(item.variant.product.name)
+                          div => raw(item.options_text)
+                        td style="color: #000; font-size: 13px; text-align: left; font-weight: 400; padding: 7px 6px; vertical-align: top;" => item.variant.sku
+                        td style="color: #000; font-size: 13px; text-align: left; font-weight: 400; padding: 7px 6px; vertical-align: top;" => item.quantity
+                        td style="color: #000; font-size: 13px; text-align: left; font-weight: 700; padding: 7px 6px; vertical-align: top;" => item.display_amount
                   tr
                     td style="border-top: 1px solid #d6d6d6; padding: 4px 6px;"
                     td style="border-top: 1px solid #d6d6d6; padding: 4px 6px;"
@@ -51,7 +51,7 @@ table align="center" border="0" cellpadding="0" cellspacing="0" width="100%"
                     tr
                       td style="padding: 4px 6px;"
                       td style="padding: 4px 6px;"
-                      td style="text-align: right; font-size: 13px; font-weight: 400; padding: 4px 6px;" =' raw(adjustment.label)
+                      td style="text-align: right; font-size: 13px; font-weight: 400; padding: 4px 6px;" => raw(adjustment.label)
                       td style="font-size: 13px; font-weight: 700; padding: 4px 6px;" = adjustment.display_amount
                   tr
                     td style="padding: 4px 6px;"
