[main][admin] speed up orders line items view slightly

--- a/app/views/spree/admin/orders/_line_items_table.html.slim
+++ b/app/views/spree/admin/orders/_line_items_table.html.slim
@@ -7,7 +7,7 @@ table.line_items
     tr
       th Order Date
       th Delivery Due
-      th SLA
+      th Due In
       th Order Number
       th Line ID
       th SKU
