[feat][express making] updated texts

--- a/app/views/products/details/show.html.slim
+++ b/app/views/products/details/show.html.slim
@@ -318,4 +318,4 @@ hr
       .row
         .col-md-10.col-md-offset-1
           button.btn-clear-making-options.btn.btn-block.btn-black.making-option data-id="original" data-name="original" data-price=""
-            | Standard Making
+            | Production Time
