--- a/app/assets/stylesheets/redesign/_checkout.css.scss
+++ b/app/assets/stylesheets/redesign/_checkout.css.scss
@@ -23,7 +23,9 @@
       text-transform: uppercase;
       margin: 25px 0;
     }
-
+    .price-express-making {
+      margin-top: 5px;
+    }
     .cart-items li {
       background-color: #fff;
       border-top-color: #000;
